--- a/TestApplication/app/src/main/res/layout/popup_window.xml
+++ b/TestApplication/app/src/main/res/layout/popup_window.xml
@@ -27,7 +27,7 @@
 
     <Button
         android:id="@+id/btn_camera"
-        android:layout_width="0dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
         android:background="@android:color/background_light"
