--- a/TestApplication/app/src/main/res/menu/navigation.xml
+++ b/TestApplication/app/src/main/res/menu/navigation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_calender"
@@ -8,8 +9,7 @@
 
     <item
         android:id="@+id/navigation_society"
-        android:icon="@drawable/ic_group_black_24dp"
-        android:title="@string/title_society" />
+        android:icon="@android:drawable/ic_menu_add" />
 
     <item
         android:id="@+id/navigation_user"
