--- a/TestApplication/app/src/main/res/layout/activity_submit.xml
+++ b/TestApplication/app/src/main/res/layout/activity_submit.xml
@@ -48,4 +48,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
 
+    <Button
+        android:id="@+id/btn_sub"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ecedf1"
+        android:text="Submit"
+        app:layout_constraintBottom_toTopOf="parent"
+        android:layout_marginBottom="50dp"/>
+
+
 </android.support.constraint.ConstraintLayout>
