--- a/TestApplication/app/src/main/res/layout/activity_main.xml
+++ b/TestApplication/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    
+    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/calendar_webview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
+
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
